fix: added Custom ErrorCode Changes (#205)
* fix: added Custom ErrorCode Changes

* fix: reformatting

* fix: reformatting